Resolved alignment issue due to PF6 changes in console

--- a/src/components/styles/common.scss
+++ b/src/components/styles/common.scss
@@ -14,3 +14,7 @@
     animation: none;
   }
 }
+
+.cp-text-align-center {
+  text-align: center !important;
+}
